# mcp-security-audit

./: .gitignore  README.md  glama.json  pyproject.toml  scan_results.json  smithery.yaml
docs/: index.html
src/mcp_security_audit/: __init__.py  auditor.py  classifier.py  cli.py  reporter.py  server.py
