[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-security-audit"
version = "0.2.0"
description = "MCP Security Auditor — scan any MCP server for injection patterns, risky tools, and misconfigurations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "LuciferForge" }]
keywords = ["mcp", "security", "audit", "prompt-injection", "llm", "ai-safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0.0",
    "ai-injection-guard>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/LuciferForge/mcp-security-audit"
Repository = "https://github.com/LuciferForge/mcp-security-audit"

[project.scripts]
mcp-audit = "mcp_security_audit.cli:main"
mcp-security-audit = "mcp_security_audit.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_security_audit"]
