[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-security-audit"
version = "0.3.0"
description = "Security scanner for AI/ML code — 20 vulnerability patterns across Python, Java, Go, C++, Rust"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "LuciferForge" }]
keywords = ["mcp", "security", "audit", "vulnerability", "scanner", "ai-safety", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "ai-injection-guard>=0.1.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://github.com/LuciferForge/mcp-security-audit"
Repository = "https://github.com/LuciferForge/mcp-security-audit"

[project.scripts]
mcp-audit = "mcp_security_audit.cli:main"
mcp-security-audit = "mcp_security_audit.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_security_audit"]
